--- a/index.html
+++ b/index.html
@@ -16,20 +16,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | Stats preview card component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: #aa5cda;
-      }
-    </style>
   </head>
   <body>
     <section class="card">
@@ -58,10 +48,12 @@
     </section>
 
     <div class="attribution">
+     <p>
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/mizanmahi">Mizan Mahi</a>.
+        class="attribution__link">Frontend Mentor</a
+      >. Coded by <a href="https://github.com/mizanmahi" class="attribution__link">Mizan Mahi</a>.
+     </p>
     </div>
   </body>
 </html>
